erDiagram
    user {
        text id PK
        text name
        text email UK
        boolean emailVerified
        text image
        timestamp createdAt
        timestamp updatedAt
    }

    session {
        text id PK
        text userId FK
        text token UK
        timestamp expiresAt
        text ipAddress
        text userAgent
        timestamp createdAt
        timestamp updatedAt
    }

    account {
        text id PK
        text userId FK
        text accountId
        text providerId
        text accessToken
        text refreshToken
        timestamp accessTokenExpiresAt
        timestamp refreshTokenExpiresAt
        text scope
        text idToken
        text password
        timestamp createdAt
        timestamp updatedAt
    }

    verification {
        text id PK
        text identifier
        text value
        timestamp expiresAt
        timestamp createdAt
        timestamp updatedAt
    }

    user_point_balance {
        text userId PK, FK
        integer balance "default 15"
        timestamp createdAt
        timestamp updatedAt
    }

    user_sharing_setting {
        text userId PK, FK
        boolean enabled
        timestamp createdAt
        timestamp updatedAt
    }

    disabled_model {
        text id PK
        text userId FK
        text model "unique userId + model"
        timestamp createdAt
    }

    pinned_provider {
        text id PK
        text userId FK
        text providerKey "unique userId + providerKey"
        timestamp createdAt
    }

    provider_account {
        text id PK
        text userId FK
        text provider
        text name
        text accessToken "encrypted AES-256"
        text refreshToken "encrypted AES-256"
        timestamp expiresAt
        text apiKey
        text projectId
        text tier
        text accountId
        text email "unique userId + provider + email"
        boolean isActive
        timestamp disabledUntil
        timestamp lastUsedAt
        integer requestCount
        integer errorCount
        integer consecutiveErrors
        timestamp lastErrorAt
        integer lastErrorCode
        timestamp lastRecoveredByRotationAt
        text status
        timestamp statusChangedAt
        integer successCount
        timestamp lastSuccessAt
        timestamp createdAt
        timestamp updatedAt
    }

    provider_account_model_health {
        text id PK
        text providerAccountId FK
        text model "unique accountId + model"
        integer consecutiveErrors
        text status
        timestamp statusChangedAt
        timestamp lastErrorAt
        integer lastErrorCode
        timestamp lastSuccessAt
        timestamp createdUpdated
    }

    provider_account_disabled_model {
        text id PK
        text providerAccountId FK
        text model "unique accountId + model"
        timestamp createdAt
    }

    proxy_api_key {
        text id PK
        text userId FK
        text keyHash UK
        text keyPreview
        text encryptedKey
        text name
        text modelAccessMode "all or list"
        text accountAccessMode "all or list"
        boolean roamingEnabled
        boolean isActive
        timestamp expiresAt
        timestamp lastUsedAt
        timestamp createdAt
        timestamp updatedAt
    }

    proxy_api_key_rate_limit {
        text id PK
        text apiKeyId FK
        text target
        text targetType "default model"
        integer perMinute
        integer perHour
        integer perDay
        timestamp createdAt
        timestamp updatedAt
    }

    usage_log {
        text id PK
        text userId FK
        text providerAccountId FK
        text proxyApiKeyId FK
        text model
        integer inputTokens
        integer outputTokens
        integer statusCode
        integer duration
        timestamp createdAt
    }

    point_transaction {
        text id PK
        text userId FK
        integer amount
        text type
        integer balanceAfter
        text idempotencyKey UK "anti double-charge"
        text usageLogId FK
        timestamp createdAt
    }

    user ||--o{ session : "sessions"
    user ||--o{ account : "accounts"
    user ||--o| user_point_balance : "points balance 11"
    user ||--o| user_sharing_setting : "settings 11"
    user ||--o{ disabled_model : "model disabled"
    user ||--o{ pinned_provider : "providers pinned"
    user ||--o{ provider_account : "owns"
    user ||--o{ proxy_api_key : "owns"
    user ||--o{ usage_log : "usage"
    user ||--o{ point_transaction : "points"

    provider_account ||--o{ provider_account_model_health : "health per model"
    provider_account ||--o{ provider_account_disabled_model : "models disabled"
    provider_account ||--o{ usage_log : "served"

    proxy_api_key ||--o{ proxy_api_key_rate_limit : "rate limits"
    proxy_api_key ||--o{ usage_log : "key used"

    usage_log ||--o{ point_transaction : "billed via"